--- a/semi_classical/pn_summary.am
+++ b/semi_classical/pn_summary.am
@@ -1,1 +1,1 @@
-[ computation = 'post_newtonian_expansion', max_pn_order = 3, warp_velocity = '0.1', mass_parameter = '1e-6', frequency_range = '[10, 1000]', n_corrections = 3 ]
+[ analysis_type = 'pn_experimental_comparison', n_pn_orders = 3, n_detectable = 0, max_pn_order_analyzed = '3', warp_velocity = "'0.1'", snr_threshold = 5.0, best_constraint = None, experiment_types = ['LIGO'] ]
