Update post-Newtonian parameters and outputs for improved accuracy
- Changed computation parameters in pn_summary.am to reflect new analysis type and settings.
- Updated pn_test_output.ndjson to include experimental comparison data and modified strain scaling values.
- Revised pn_waveforms.ndjson to correct mass parameter values and ensure consistency across PN orders.
- Adjusted theory_params.am to increase mass parameter for better alignment with theoretical models.

--- a/semi_classical/pn_summary.am
+++ b/semi_classical/pn_summary.am
@@ -1,1 +1,1 @@
-[ analysis_type = 'pn_experimental_comparison', n_pn_orders = 3, n_detectable = 0, max_pn_order_analyzed = '3', warp_velocity = "'0.1'", snr_threshold = 5.0, best_constraint = None, experiment_types = ['LIGO'] ]
+[ computation = 'post_newtonian_expansion', max_pn_order = 3, warp_velocity = '0.1', mass_parameter = '1e-3', frequency_range = '[10.0, 1000.0]', n_corrections = 3 ]
